@@ -1,31 +1,26 @@
 /**********************************************************
  * expression parser
- * $Id: flagexp.y,v 1.15 2004/06/09 22:25:50 sisoft Exp $
+ * $Id: flagexp.y,v 1.16 2004/06/11 20:30:24 sisoft Exp $
  **********************************************************/
-%token DATE DATESTR GAPSTR ITIME NUMBER PHSTR TIMESTR ADDRSTR IDENT 
-%token CONNSTR SPEED CONNECT PHONE MAILER TIME ADDRESS FLEXEC FLLINE
-%token DOW ANY WK WE SUN MON TUE WED THU FRI SAT EQ NE
-%token GT GE LT LE LB RB AND OR NOT XOR COMMA ASTERISK
-%token AROP LOGOP PORT CID FLFILE PATHSTR HOST SFREE ANYSTR
-%expect 2
 %{
 #include "headers.h"
 #include <fnmatch.h>
+
+#ifdef NEED_DEBUG
+#define YYERROR_VERBOSE 1
+#endif
+
 #ifdef YYTEXT_POINTER
 extern char *yytext;
 #else
 extern char yytext[];
 #endif
-#ifdef NEED_DEBUG
-#define YYERROR_VERBOSE 1
-#endif
-
-int yylex();
-int flxpres;
-
-static int logic(int e1, int op,int e2);
+extern char *yyPTR;
+extern int yylex();
+static int logic(int e1,int op,int e2);
+static int checkflag();
 static int checkconnstr();
-static int checkspeed(int op, int speed, int real);
+static int checkspeed(int op,int speed,int real);
 static int checksfree(int op,int sp);
 static int checkmailer();
 static int checkphone();
@@ -36,12 +31,18 @@ static int checkfile();
 static int checkexec();
 static int checkline(int lnum);
 static int yyerror(char *s);
-extern char *yyPTR;
+static int flxpres;
 %}
+
+%token DATESTR GAPSTR PHSTR TIMESTR ADDRSTR PATHSTR ANYSTR IDENT NUMBER
+%token AROP LOGOP EQ NE GT GE LT LE AND OR NOT XOR LB RB COMMA
+%token ADDRESS ITIME CONNSTR SPEED CONNECT PHONE MAILER CID
+%token FLTIME FLDATE EXEC FLLINE PORT FLFILE HOST SFREE
+%expect 2
 
 %%
 fullline	: expression
-                {flxpres=$1;}
+			{flxpres=$1;}
 		;
 expression	: elemexp
 			{$$ = $1;}
@@ -71,7 +72,7 @@ elemexp		: flag
 			{$$ = checkhost();}
 		| PORT IDENT
 			{$$ = checkport();}
-		| FLEXEC ANYSTR
+		| EXEC ANYSTR
 			{$$ = checkexec();}
 		| FLFILE PATHSTR
 			{$$ = checkfile();}
@@ -79,15 +80,15 @@ elemexp		: flag
 			{$$ = checkline($2);}
 		| ITIME timestring
 			{$$ = $2;}
-		| TIME gapstring
+		| FLTIME gapstring
 			{$$ = $2;}
-		| DATE datestring
+		| FLDATE datestring
 			{$$ = $2;}
 		| ADDRESS ADDRSTR
 			{$$ = $2;}
 		;
-flag		:IDENT
-		{$$ = $1;}
+flag		: IDENT
+			{$$ = checkflag();}
 		;
 datestring	: DATESTR
 			{$$ = $1;}
@@ -123,6 +124,67 @@ static int logic(int e1, int op,int e2)
 		return 0;
 	}
 }
+
+static int checkflag()
+{
+	int fln;
+	char *p, *q;
+	DEBUG(('Y',2,"checkflag: \"%s\"",yytext));
+#ifdef WITH_PERL
+	if(!strncasecmp(yytext,"perl",4)) {
+		if((fln=atoi(yytext+4))<0||fln>9) {
+			write_log("error: invalid perl flag: %s",yytext);
+			return 0;
+		}
+		DEBUG(('Y',3,"checkflag: perl%d: %d",fln,(perl_flg&(1<<fln))?1:0));
+		return((perl_flg&(1<<fln))?1:0);
+	}
+#endif
+	if(!rnode)return 0;
+ 	if(!strncasecmp(yytext,"list",4)) {
+		DEBUG(('Y',3,"checkflag: listed: %d",rnode->options&O_LST));
+		return rnode->options&O_LST;
+	}
+	if(!strncasecmp(yytext,"prot",4)) {
+		DEBUG(('Y',3,"checkflag: protected: %d",rnode->options&O_PWD));
+		return rnode->options&O_PWD;
+	}
+	if(!strncasecmp(yytext,"in",2)) {
+		DEBUG(('Y',3,"checkflag: inbound: %d",rnode->options&O_INB));
+		return rnode->options&O_INB;
+	}
+	if(!strncasecmp(yytext,"out",3)) {
+		DEBUG(('Y',3,"checkflag: outbound: %d",!(rnode->options&O_INB)));
+		return !(rnode->options&O_INB);
+	}
+	if(!strncasecmp(yytext,"tcp",3)) {
+		DEBUG(('Y',3,"checkflag: tcp/ip: %d",rnode->options&O_TCP));
+		return rnode->options&O_TCP;
+	}
+	if(!strncasecmp(yytext,"binkp",5)) {
+		DEBUG(('Y',3,"checkflag: binkp: %d",bink));
+		return bink;
+	}
+	if(!strncasecmp(yytext,"bad",3)) {
+		DEBUG(('Y',3,"checkflag: bad password: %d",rnode->options&O_BAD));
+		return rnode->options&O_BAD;
+	}
+	if(rnode->flags) {
+		q=xstrdup(rnode->flags);p=strtok(q,",");
+		while(p) {
+			if(!strcasecmp(yytext,p)) {
+				xfree(q);
+				DEBUG(('Y',3,"checkflag: other: 1"));
+				return 1;
+			}
+			p=strtok(NULL,",");
+		}
+		xfree(q);
+	}
+	DEBUG(('Y',3,"checkflag: other: 0"));
+	return 0;
+}
+
 
 static int checkconnstr()
 {
@@ -249,8 +311,6 @@ static int checkline(int lnum)
 	if(rnode->hidnum==lnum)return 1;
 	return 0;
 }
-
-int yyparse();
 
 int flagexp(slist_t *expr,int strict)
 {
